--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "my_medium",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^4.0.7"
+    "@rails/webpacker": "^4.0.7",
+    "stimulus": "^1.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.8.2"
