--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^4.0.7",
+    "axios": "^0.19.0",
     "bulma": "^0.8.0",
     "stimulus": "^1.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "webpack-dev-server": "^3.8.2"
   }
 }
